19990623-23:00 EDT David G. Holm <dholm@jsd-llc.com>
  * source/rtl/copyfile.c
    - Renamed _fsCopy to hb_fsCopy(), in case we decide to make
      it available to other internal Harbour functions later.
  * source/rtl/files.c
    - Solved the apparent read only problem with hb_fsCreate().
      The problem turned out to be that errno is set to an error
      value if open() has to create the file instead of opening
      and truncating. And because hb_fsCreate() wasn't checking
      the return value before saving errno for hb_fsError(), an
      error would be indicated if the file had to be created.
      But now test/working/testcopy works even when newprog.prg
      (the destination for the COPY TO command) doesn't exist.

19990623-22:05 EDT David G. Holm <dholm@jsd-llc.com>
  Code has been added to the following two modules to return the
  correct number of decimal places for floating point results.
  * source/rtl/descend.c
  * source/rtl/math.c

19990623-21:50 EDT David G. Holm <dholm@jsd-llc.com>
  Oops! I accidentally left the HB_USE_STRICMP and HB_USE_STRCASECMP
  stuff in these two files. It's really gone now...
  * include/hbsetup.h
  * source/rtl/strcmp.c

19990623-21:30 EDT David G. Holm <dholm@jsd-llc.com>
  * makefile.b31
    - Added support for source/rtl/copyfile.c
    - source/rtl/genobj.c was moved to source/contrib
  * makefile.icc
    - Added support for source/rtl/copyfile.c
  + include/box.ch
    - New include file contributed by Phil Barnett
  + include/box.h
    - Moved all border type manifest constants from gtapi.h
    - Removed leading underscores
  + include/color.ch
    - Moved all color attribute manifest constants from gtapi.h
    - Removed leading underscores
  * include/gtapi.h
    - Moved all manifest constants for color attributes to color.ch
    - Added #include <color.ch>
    - Removed all manifest constants for cursor types
    - Added #include <setcurs.ch>
    - Moved all manifest constants for border types to box.h